--- a/parts/client/fields.jade
+++ b/parts/client/fields.jade
@@ -520,7 +520,7 @@ template(name='array_edit')
     if field_value
         each field_value
             if currentUser
-                .ui.large.basic.circular.label.touch_element
+                .ui.large.basic.label.touch_element
                     i.delete.icon.remove_element
                     |#{this}
                 // .ui.compact.button.pick_tag
