--- a/parts/profile/user_edit.jade
+++ b/parts/profile/user_edit.jade
@@ -74,6 +74,17 @@ template(name='password_edit')
         | set password
             
             
+template(name='user_edit_alerts')
+    .ui.header
+        i.rss.icon
+        | alerts
+    .ui.header notifiy when 
+    .ui.big.link.list
+        .item receive credit
+        .item invited to event 
+        .item invited to shift 
+        .item personal request received        
+       
             
 template(name='emails_edit')
     //- .ui.small.header 
@@ -158,3 +169,32 @@ template(name='username_edit')
         input.new_username(type='text' placeholder='new username...')
         i.play.link.icon.change_username
 
+
+
+template(name='user_edit_privacy')
+    .ui.header
+        +icolor name='private' cl='ui image'
+        | privacy
+    .ui.grid 
+        .row 
+            .four.wide.column
+                +boolean_edit key='publish_profile' label='publish profile' direct=true
+            .twelve.wide.column
+                .ui.header 
+                    |make profile public 
+                .ui.small.header 
+                    |allow others to find your profile and follow you, allows you to follow others, enrolls you in public leaderboards
+        .row 
+            .sixteen.wide.column
+                a.ui.basic.compact.button.logout_other_clients(href="#")
+                    i.globe.icon
+                    |log out other clients
+                if is_admin
+                    a.ui.basic.compact.button.force_logout(href="#")
+                        i.shield.icon
+                        |force log out
+                
+                .ui.header sessions
+                .ui.large.list
+                    each current_user.services.resume.loginTokens
+                        .item #{when}: #{hashedToken}
