--- a/parts/profile/user_friends.jade
+++ b/parts/profile/user_friends.jade
@@ -20,76 +20,8 @@ template(name='user_segment')
         .content
             .header
                 |#{name}
-                small $#{credit}
+                small #{points}
             .description
                 each tags
                     .ui.basic.label #{this}
 
-    //- .ui.horizontal.card
-    //-     .image
-    //-         if image_id
-    //-             img(src="{{c.url image_id gravity='face' crop='crop'}}")
-    //-     .content
-    //-         a.ui.header(href="/u/#{username}")
-    //-             |#{first_name} #{last_name}
-    //-             //- |#{username}
-    //-         //- .ui.header Tags
-    //-         each tags
-    //-             .ui.basic.label #{this}
-    //-         +user_status user
-    //-         .ui.header #{body}
-    //-         +user_friend_button
-//- template(name='user_friend_button')
-//-     if is_friend
-//-         .ui.blue.fade.animated.button.unfriend
-//-             .visible.content
-//-                 |connected
-//-             .hidden.content
-//-                 i.minus.icon
-//-     else
-//-         .ui.basic.button.friend
-//-             i.plus.icon
-//-             |connect
-//- 
-//- 
-//- 
-//- template(name='user_bookmarks_small')
-//-     .ui.inline.header
-//-         i.bookmark.small.icon
-//-         | bookmarks
-//-     div
-//-     .ui.large.link.list
-//-         each bookmarks
-//-             a.item(href="/#{model}/#{_id}/view") #{title} [#{model}]
-//- 
-//- 
-//- 
-//- 
-//- 
-//- 
-//- template(name='user_orders')
-//-     .ui.header
-//-         i.list.icon
-//-         |orders
-//-     .scrolling
-//-         each orders
-//-             +order_segment
-//- 
-//- 
-//- template(name='order_segment')
-//-     .ui.segment
-//-         .ui.header #{when} #{_author_username}
-//-         .ui.list
-//-             .item buyer: #{buyer_username}
-//-             .item seller: #{seller_username}
-//-             .item product_id: #{product_id}
-//-         with product
-//-             .ui.header product #{title}
-//-         a.ui.button(href="/alpha/#{product_id}/view")
-//-             |view product
-//-         if can_edit
-//-             .ui.small.basic.button.cancel
-//-                 i.remove.icon
-//-                 |cancel
-//-         if is_admin
-//-             +remove_button
