--- a/parts/users.jade
+++ b/parts/users.jade
@@ -61,9 +61,9 @@ template(name='user_item')
             a.ui.inline.header.pointer(href="/user/#{username}" style="color:#{theme_color};")
                 |#{name}
                 //- |#{username}
-            .ui.inline.small.header(style="color:#{current_user.theme_color};") #{points}pts
-            .ui.large.basic.label(style="color:#{current_user.theme_color};" title='one ratio') {{to_percent one_ratio}}%
-            .ui.large.basic.label(style="color:#{current_user.theme_color};") #{flow_volume} vol
+            .ui.inline.small.header(style="color:#{current_user.theme_color};") #{points}p
+            // .ui.large.basic.label(style="color:#{current_user.theme_color};" title='one ratio') {{to_percent one_ratio}}%
+            // .ui.large.basic.label(style="color:#{current_user.theme_color};") #{flow_volume} vol
             // each levels
             //     .ui.basic.small.label(style="color:#{theme_color};") #{this}
             // unless is_this_user
