--- a/parts/debit_edit.jade
+++ b/parts/debit_edit.jade
@@ -67,11 +67,11 @@ template(name='debit_edit')
                     .ui.big.input
                         input.point_amount(type='number' value=amount min='1' max=point_max)
                     div
-                    +key_value_edit key='amount' value=1
-                    +key_value_edit key='amount' value=6
-                    +key_value_edit key='amount' value=12
-                    +key_value_edit key='amount' value=22
-                    +key_value_edit key='amount' value=55
+                    // +key_value_edit key='amount' value=10
+                    // +key_value_edit key='amount' value=50
+                    // +key_value_edit key='amount' value=100
+                    // +key_value_edit key='amount' value=
+                    // +key_value_edit key='amount' value=55
                     .spacer
                     .ui.center.aligned.basic.segment
                         if can_submit
